<resources>
    <string name="app_name">Unit Converter</string>
    <string name="convert_units">Convert Units</string>
    <string name="convert_length">Convert Length</string>
    <string name="convert_volume">Convert Volume</string>
    <string name="convert_temperature">Convert Temperature</string>
    <string name="test_your_knowledge">Test Your Knowledge!</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="convert">Convert</string>
    <string name="you_shouldn_t_see_this">You shouldn\'t see this.</string>
    <string name="value">Value</string>
    <string name="ruler">ruler</string>
    <string name="measuring_cup">measuring cup</string>
    <string name="thermometer">thermometer</string>
    <string name="scale">scale</string>
    <string-array name="tempUnits">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="lengthUnits">
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Decimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
    </string-array>
    <string-array name="volumeUnits">
        <item>Milliliter</item>
        <item>Liter</item>
        <item>Ounce</item>
        <item>Cup</item>
        <item>Pint</item>
        <item>Quart</item>
        <item>Gallon</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="created_by">Created by: Shawn Cheek (CSC451 Assignment 1)</string>
    <string name="home">Home</string>
    <string name="_2_decimal_places">2 decimal places</string>
    <string name="check">Check</string>
    <string name="q1">How many inches are in a yard?</string>
    <string name="q3">To convert from Celsius to Fahrenheit, you multiply by __ and add 32.</string>
    <string name="q2">How many ounces are in a gallon?</string>
</resources>
