<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_length"
            android:icon="@drawable/ic_vector_ruler"
            android:title="@string/convert_length" />
        <item
            android:id="@+id/nav_volume"
            android:icon="@drawable/ic_vector_cup"
            android:title="@string/convert_volume" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_vector_thermometer"
            android:title="@string/convert_temperature" />
    </group>

</menu>
